// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context: Autocomplete Items renders the address icon 1`] = `
<div
  className="autocompleteItem"
>
  <strong>
    <i
      className="fa fa-map-marker autocompleteIcon"
    />
  </strong>
  <span />
</div>
`;

exports[`Context: Autocomplete Items renders the port icon 1`] = `
<div
  className="autocompleteItem"
>
  <strong>
    <_default
      className="autocompleteIcon"
    />
  </strong>
  <span />
</div>
`;
